fix: 修掉 code review 找出的問題 (#68)
八個功能做完之後跑了併發與熱路徑兩輪審查，加上我自己的安全與查詢次數檢查。
以下每一項都實測過。

## 併發正確性

**1. 連點兩下「有貨通知我」會 deadlock。** V26 的唯一鍵含 `notified_at`，
而 MySQL 允許多個 NULL——那個索引在 pending 狀態下等於不存在，
所以訂閱只能靠 `insert ... where not exists` 擋重複，而它在 REPEATABLE READ
下取 gap lock。**實測 6 併發 × 5 輪，第一輪就有兩次失敗。**

V29 改用生成欄位模擬部分唯一索引（未通知為 1、已通知為 NULL），
訂閱退化成單句 upsert。修正後同樣的測試 30 次全部 200，列數恆為 1。

（第一版用 `IF(notified_at IS NULL, 0, id)`，MySQL 拒絕：生成欄位不能引用
AUTO_INCREMENT 欄位，錯誤碼 3109。）

這同時解掉一個更糟的隱患：真的插進兩筆 pending 的話，`markNotified` 會把
同一個時間戳寫進兩列而撞上唯一鍵，讓**整輪掃描回滾**——而毒藥列會留著，
於是每一輪都在同一個地方失敗，到貨通知永久停擺。

**2. 問答的回答是 read-modify-write。** 兩個管理員同時回答，先到的那份被
靜默覆蓋而兩邊都顯示成功。更糟的是「一人回答、一人下架」：下架用過期快照
整列寫回，會把回答連同 `answered_at` 一起抹成 NULL，那題**重新出現在
待回覆清單上**而內容已經沒了。

改成條件式 UPDATE（`where answered_at is null`），撲空回 B0053；
下架只改 `published` 一欄。

**3. `recordView` 的 try/catch 是假的。** 它自己標了 `@Transactional`，
例外會把交易標成 rollback-only，吞掉之後仍然在提交時炸成
`UnexpectedRollbackException`——使用者一樣拿到 500。拿掉服務層的交易註解，
讓倉庫那一層當邊界。

那條「失敗不往外拋」的測試會通過，因為 mock 底下沒有真正的交易——
與鐵則 7-1 講的是同一種盲點。

**4. 到貨通知整輪包在一個交易裡。** 上限是 100 SKU × 500 人 = 五萬列的鎖
撐到最後才提交，而補貨那一刻正好是訂閱流量的尖峰。交易邊界下移到單一 SKU，
並依鐵則 6 拆成獨立 Bean（同類別內部呼叫不過代理）。逐個 SKU try/catch，
一個失敗不再拖垮整輪——補了一條測試鎖住這件事。

**5. 內部註記走 managed entity 會推進 `@Version`**，讓客服寫註記時可能被
同時發生的付款回呼撞成樂觀鎖衝突。而那個 Javadoc 自己寫著「不該跟訂單
狀態機綁在一起」。改成 bulk update。

## 效能

**6. 銷售報表的衍生表掃全表。** WHERE 只寫在外層，衍生表會先把整張
`order_line` 聚合完再 join——查一天和查一年做同樣的工。
**實測 1.067 秒 → 0.0018 秒，結果逐欄相同（35 / 2013761.00 / 73）。**

不能偷懶改成平鋪 join：訂單會被行數放大，實測 35 筆變 51 筆、營收多算 74%，
而那種錯不會有任何東西發現。

**7. `orders` 沒有 `paid_at` 索引**，報表全部按它篩。現在看不出來是因為
待付款訂單佔多數而被 status 條件擋掉；生產環境會反過來。V30 補上。

**8. `findAlsoViewed` 的 `limit 500` 只綁住 seed 那一側**，另一側是
「這 500 個人看過的全部商品」，而瀏覽紀錄沒有淘汰機制。三件事一起做：
另一側加 90 天時間窗、把 `join product` 移到聚合之後（先前是對中間結果
每一列各做一次主鍵查找，可能上百萬次只為留下 8 列）、加每日清理排程。

**9. 問答列表的作者查詢是 N+1**，而且**只在作者不同時才現形**——
同一個作者會被 JPA 的一級快取蓋掉。實測 4 個不同作者用 8 次查詢、
同一個作者只用 4 次。改成批次取名，修正後固定 5 次（含背景噪音）。

## 隱私

**10. `/also-viewed` 是匿名可讀的，而它會洩漏單一使用者的瀏覽紀錄。**
實測：讓一個帳號看三個冷門商品，匿名查其中一個就把另外兩個完整吐出來。
知道某人看過某個冷門